# VAST

./: pyproject.toml  run.py
data/: IndexAnno.py  audio_mapper.py  vision_mapper.py
model/: general_module.py
scripts/vast/: finetune_cap.sh
utils/: build_optimizer.py  pipeline.py
